src/test/c/accept/03-createChord.msh
Chord myChord = Chord(c, e, g, d#);