src/test/c/reject/09-invalidChord.msh
Chord myChord = Chord(c, r, g, d#);